ukui-settings-daemon (3.1.0-1.16) v101; urgency=medium

  * BUG号：90170 【PTOF】【触控板】开启“插入鼠标时禁用触控板”，插入鼠标后触控板被禁用，拔出鼠标后触摸板仍被禁用（必现）
           89602 【键盘】开机后多次热插拔外接键盘，触摸板失效，注销后重新登录恢复（概率：18/20）
  *需求说明：无
  *其他修改说明：1.针对fn热键增加x的处理，优化某些热键相应过于频繁问题。
                 2.增加dbus提权服务，支持相机热键。

 -- sundagao <sundagao@kylinos.cn>  Fri, 12 Nov 2021 15:27:35 +0800

ukui-settings-daemon (3.1.0-1.15) v101; urgency=medium

    * BUG号：ZS  88899 【显示】切换显示模式为镜像/扩展屏/第一屏/其他屏，按下win+p都默认显示为第一个选项
          ZS 83852 【arm鲲鹏】【monitor test】arm台式机设置镜像屏之后关闭副屏，重启，主屏花屏，然后打开副屏，主屏恢复正常。
          ZS 83852 【arm鲲鹏】【monitortest】arm台式机设置镜像屏之后关闭副屏，重启，主屏花屏，然后打开副屏，主屏恢复正常。
          GS 89656 【键盘】休眠/睡眠唤醒后，使用F6/F7调节音量功能失效，重启后无法恢复（3/3units,9/10times）

          ZS 89082 【控制面板】【显示】双屏显示为非复制模式，使用win+p切换为复制，无反应
          ZS 90008 【前线】【外部禅道编号6237】【双屏|显示】【创智成TR4261】通过fn+f2切换系统投屏后分辨率会自动调至到最佳分辨率1920*1080
          GS 89156 【控制面板】【显示】夜间模式，调节屏幕色温失效。
          ZS 89742 【显示】连接1个HDMI显示器，打开控制面板-显示器，按下win+p，第二行显示“无”，选择“无”，控制面板的缩略图置灰。依次选择镜像和扩展，控制面板崩溃
          ZS 61912 【快捷键】【103537】打开右键菜单后，按笔记本音量调节热键无反应
  * 需求说明：无
  * 其他改动说明：无

 -- sundagao <sundagao@kylinos.cn>  Fri, 12 Nov 2021 15:25:48 +0800

ukui-settings-daemon (3.1.0-1.14) v101; urgency=medium

  * BUG号： 67356 【设置】【触摸板】在设置-设备-触摸板禁用触摸板相关功能，仍可以进行触摸板操作，设置不生效 
  * 需求说明：无
  * 其他改动说明：启动时判别项目类型，如果是tablet则直接读取statusmanager提供的角度值，否则从配置文件内获取，增加角度值的监听写入，避免控制面板设置完毕后，启动usd无法恢复的情况

 -- sundagao <sundagao@kylinos.cn>  Tue, 09 Nov 2021 20:29:15 +0800

ukui-settings-daemon (3.1.0-1.13) v101; urgency=medium

  * BUG号： 88798 【双屏】【必现】win+p调节双屏模式异常-无法通过win+p切换复制模式和拓展模式，切换到仅edp屏幕后会自动到镜像模式，从仅hdmi屏切到拓展屏幕，内置屏幕黑屏  
            88764 【双屏】【必现】win+p打开的双屏模式调节面板，始终展示当前模式为第一屏模式，不随模式切换而变化
            82385 [x100][主线]在外接屏下，win+p键无法正常切换镜像屏与扩展屏  
  * 需求说明：无
  * 其他修改说明：1.修复网络开关按钮关闭wifi时，wifi快捷键无法打开
                  2.修复usd第一次启动时，快捷键无法设置声音问题

 -- sundagao <sundagao@kylinos.cn>  Wed, 03 Nov 2021 19:11:10 +0800

ukui-settings-daemon (3.1.0-1.12) v101; urgency=medium
